tests/Parse/test_1_r03.spl
int test_1_r03()
{
	int i = 0, j = 1;
  float i = $;
  if(i < 9.0){
    return 1
  }
  return @;
}
